<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.home.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/md_theme_light_primary"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_teacher" />

            <TextView
                style="@style/App_LargeText"
                android:id="@+id/profile_tv_full_name"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                tools:text="ABOULHODA MILOUD "
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                style="@style/App_SmallText"
                android:id="@+id/profile_tv_email"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="miloud.aboulhoda@gmail.com" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-25dp"
            android:background="@drawable/login_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="6dp">

                    <TextView
                        android:textStyle="bold"
                        style="@style/App_LargeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cne" />

                    <TextView
                        android:id="@+id/profile_tv_cne"
                        style="@style/App_LargeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        tools:text="GA010203"
                        android:textColor="@color/md_theme_light_tertiary" />
                </LinearLayout>

                <View

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0.3"
                    android:background="@color/md_theme_light_tertiary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="6dp">

                    <TextView
                        android:textStyle="bold"
                        style="@style/App_LargeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name" />

                    <TextView
                        android:id="@+id/profile_tv_first_name"
                        style="@style/App_LargeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        tools:text="Miloud"
                        android:textColor="@color/md_theme_light_tertiary" />
                </LinearLayout>

                <View

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0.3"
                    android:background="@color/md_theme_light_tertiary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="6dp">

                    <TextView
                        android:textStyle="bold"
                        style="@style/App_LargeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name" />

                    <TextView
                        android:id="@+id/profile_tv_last_name"
                        style="@style/App_LargeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        tools:text="Aboulhoda"
                        android:textColor="@color/md_theme_light_tertiary" />
                </LinearLayout>

                <View

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0.3"
                    android:background="@color/md_theme_light_tertiary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="6dp">

                    <TextView
                        android:textStyle="bold"
                        style="@style/App_LargeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number" />

                    <TextView
                        android:id="@+id/profile_tv_phone_number"
                        style="@style/App_LargeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        tools:text="0601020304"
                        android:textColor="@color/md_theme_light_tertiary" />
                </LinearLayout>

                <View

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0.3"
                    android:background="@color/md_theme_light_tertiary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="6dp">

                    <TextView
                        android:textStyle="bold"
                        style="@style/App_LargeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_of_birth" />

                    <TextView
                        android:id="@+id/profile_tv_date_of_birth"
                        style="@style/App_LargeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        tools:text="01/01/1970"
                        android:textColor="@color/md_theme_light_tertiary" />
                </LinearLayout>

                <View

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0.3"
                    android:background="@color/md_theme_light_tertiary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="6dp">

                    <TextView
                        android:textStyle="bold"
                        style="@style/App_LargeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/qualification" />

                    <TextView
                        android:id="@+id/profile_tv_qualification"
                        style="@style/App_LargeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        tools:text="Qualification"
                        android:textColor="@color/md_theme_light_tertiary" />
                </LinearLayout>

                <View

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0.3"
                    android:background="@color/md_theme_light_tertiary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="6dp">

                    <TextView
                        android:textStyle="bold"
                        style="@style/App_LargeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/experience" />

                    <TextView
                        android:id="@+id/profile_tv_experience"
                        style="@style/App_LargeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        tools:text="Experience"
                        android:textColor="@color/md_theme_light_tertiary" />
                </LinearLayout>

                <View

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0.3"
                    android:background="@color/md_theme_light_tertiary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="6dp">

                    <TextView
                        android:textStyle="bold"
                        style="@style/App_LargeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adresse" />

                    <TextView
                        android:id="@+id/profile_tv_adresse"
                        style="@style/App_LargeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        tools:text="Experience"
                        android:textColor="@color/md_theme_light_tertiary" />
                </LinearLayout>


                <Button
                    android:id="@+id/btnSing"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="@string/change_password"
                    android:textSize="18sp" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


